fix errors found in code review

--- a/docs/references/javascript/clerk/handle-navigation.mdx
+++ b/docs/references/javascript/clerk/handle-navigation.mdx
@@ -52,7 +52,7 @@ Take a look at the function parameters description below for more usage details.
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `redirectUrlComplete` | `string | undefined` | Full URL or path to navigate after successful magic link verification on completed sign up or sign in on the same device. |
+| `redirectUrlComplete` | `string \| undefined` | Full URL or path to navigate after successful magic link verification on completed sign up or sign in on the same device. |
 | `redirectUrl` | `string \| undefined` | Full URL or path to navigate after successful magic link verification on the same device, but not completed sign in or sign up. |
 | `onVerifiedOnOtherDevice` | `() => void` | Callback function to be executed after successful magic link verification on another device. |
 
@@ -77,7 +77,7 @@ Completes a custom OAuth flow started by calling either [`SignIn.authenticateWit
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `params` | [`HandleOAuthCallbackParams`](#handleoauthcallbackparams) | Additional props that define where the user will be redirected to at the end of a successful OAuth flow. |
+| `params` | [`HandleOAuthCallbackParams`](#handle-o-auth-callback-params) | Additional props that define where the user will be redirected to at the end of a successful OAuth flow. |
 | `customNavigate` | `(to: string) => Promise<unknown>` | Allows you to define a custom navigation function. |
 
 ### `HandleOAuthCallbackParams`
