--- a/docs/references/javascript/clerk/organization-profile.mdx
+++ b/docs/references/javascript/clerk/organization-profile.mdx
@@ -243,6 +243,6 @@ All props below are optional.
 | Name | Type | Description |
 | --- | --- | --- |
 | `afterLeaveOrganizationUrl` | `string` | Full URL or path to navigate after leaving an organization. |
-| `path` | `string` | The path where the component is mounted when path-based routing is used. -e.g. /org-profile. This prop is ignored in hash and virtual based routing. |
+| `path` | `string` | The path where the component is mounted when path-based routing is used. -e.g. /org-profile.<br />This prop is ignored in hash and virtual based routing. |
 | `routing` | `string` | The routing strategy for your pages. <br />Supported values are: <ul><li>`hash` (default): Hash based routing.</li> <li>`path`: Path based routing.</li> <li>`virtual`: Virtual based routing.</li></ul> |
 | `appearance` | `object` | Control the look and feel of the component. |
