--- a/docs/references/javascript/clerk/sign-in.mdx
+++ b/docs/references/javascript/clerk/sign-in.mdx
@@ -73,7 +73,7 @@ function mountSignIn(node: HTMLDivElement, props?: SignInProps): void;
 | Name | Type | Description |
 | --- | --- | --- |
 | `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element used to render in the `<SignIn />` component |
-| `props`? | [`SignInProps`]("#sign-in-props") | The properties to pass to the `<SignIn />` component |
+| `props?` | [`SignInProps`]("#sign-in-props") | The properties to pass to the `<SignIn />` component |
 
 ## `unmountSignIn()`
 
