--- a/docs/references/javascript/clerk/session-methods.mdx
+++ b/docs/references/javascript/clerk/session-methods.mdx
@@ -31,8 +31,8 @@ If an active session already exists, it will be replaced with the new one. The c
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `session` | [`Session`](/docs/references/javascript/session) \| `string` \| `null` | A `Session` object or `Session ID` string to be set as the current session, or **null** to simply remove the active session, without setting a new one. |
-| `beforeEmit?` | `(session: Session \| null) => Promise<any>` | Callback that will trigger when the current session is set to **undefined**, before finally being set to the passed session. Usually used for navigation. |
+| `session` | [`Session`](/docs/references/javascript/session) \| `string` \| `null` | A `Session` object or `Session ID` string to be set as the current session, or `null` to simply remove the active session, without setting a new one. |
+| `beforeEmit?` | `(session: Session \| null) => Promise<any>` | Callback that will trigger when the current session is set to `undefined`, before finally being set to the passed session. Usually used for navigation. |
 
 ### Returns
 
