--- a/docs/references/react/use-session-list.mdx
+++ b/docs/references/react/use-session-list.mdx
@@ -58,6 +58,6 @@ export default function Home() {
 | Values | Description |
 | --- | --- |
 | `isLoaded` | A boolean that is set to false until Clerk loads and initializes. |
-| `setActive()` | A function that sets the active session. In most cases, this should be used over setSession(). |
+| `setActive()` | A function that sets the active session. In most cases, this should be used over `setSession()`. |
 | `setSession()` | A function that sets the active session. |
 | `sessions` | Holds an array of `Session` objects that have been registered on the client device. |
