--- a/docs/references/react/use-session.mdx
+++ b/docs/references/react/use-session.mdx
@@ -68,6 +68,6 @@ export default function Home() {
 | Values | Description |
 | --- | --- |
 | `isLoaded` | A boolean that is set to false until Clerk loads and initializes. |
-| `setActive()` | A function that sets the active session. In most cases, this should be used over setSession(). |
+| `setActive()` | A function that sets the active session. In most cases, this should be used over `setSession()`. |
 | `setSession()` | A function that sets the active session. |
 | `session` | Holds the current active session for the user. |
