--- a/docs/references/react/use-sign-in.mdx
+++ b/docs/references/react/use-sign-in.mdx
@@ -176,6 +176,6 @@ The `useSignIn` hook provides access to the `SignIn` object, which allows you to
 | Values | Description |
 | --- | --- |
 | `isLoaded` | A boolean that is set to false until Clerk loads and initializes. |
-| `setActive()` | A function that sets the active session. In most cases, this should be used over setSession(). |
+| `setActive()` | A function that sets the active session. In most cases, this should be used over `setSession()`. |
 | `setSession()` | A function that sets the active session. |
 | `signIn` | An object that contains the current sign in attempt status and methods to create a new sign in attempt. |
