--- a/docs/references/react/use-sign-up.mdx
+++ b/docs/references/react/use-sign-up.mdx
@@ -181,7 +181,7 @@ The `useSignUp` hook gives you access to the `SignUp` object, which allows you t
 | Values | Description |
 | --- | --- |
 | `isLoaded` | A boolean that is set to false until Clerk loads and initializes. |
-| `setActive()` | A function that sets the active session. In most cases, this should be used over setSession(). |
+| `setActive()` | A function that sets the active session. In most cases, this should be used over `setSession()`. |
 | `setSession()` | A function that sets the active session. |
 | `signUp` | An object that contains the current sign up attempt status and methods to create a new sign up attempt. |
 
