--- a/docs/references/nextjs/overview.mdx
+++ b/docs/references/nextjs/overview.mdx
@@ -11,6 +11,26 @@ Clerk makes it simple to add authentication to your Next.js application. Looking
 
 The `authMiddleware()` helper integrates Clerk authentication into your Next.js application through middleware. It allows you to integrate authorization into both the client and server of your application. You can learn more [here](/docs/references/nextjs/auth-middleware).
 
+## Client-side helpers
+
+Because Clerk Next.js is a wrapper around Clerk React, you can utilize the hooks that Clerk React provides. These hooks give you access to the [`Clerk`](/docs/references/javascript/clerk/clerk) object, and a set of useful helper methods for signing in and signing up. You can learn more about these hooks [here](/docs/references/react/use-user).
+
+{/* Another option for copy. However, this list could be a debt problem; e.g. if we added more hooks in the future, this list would need to be updated as well.
+
+Clerk provides several helpers for integrating authentication into your Next.js application's client-side code.
+
+- [`useUser()`](/docs/references/react/use-user)
+- [`useClerk()`](/docs/references/react/use-clerk)
+- [`useAuth()`](/docs/references/react/use-auth)
+- [`useSignIn()`](/docs/references/react/use-sign-in)
+- [`useSignUp()`](/docs/references/react/use-sign-up)
+- [`useSession()`](/docs/references/react/use-session)
+- [`useSessionList()`](/docs/references/react/use-session-list)
+- [`useOrganization()`](/docs/references/react/use-organization)
+- [`useOrganizationList()`](/docs/references/react/use-organization-list)
+
+*/}
+
 ## App Router
 
 Clerk provides first-class support for the [Next.js App Router](https://nextjs.org/docs/app). The below methods and references show how to integrate Clerk features into applications that take advantage of the latest App Router and React Server Components features.
