apply changes from code review and fix broken links

--- a/docs/quickstarts/javascript.mdx
+++ b/docs/quickstarts/javascript.mdx
@@ -82,7 +82,7 @@ To use the ClerkJS package, you'll need to initialize the Clerk class with your 
 ```js copy filename="index.js" 
 import Clerk from '@clerk/clerk-js';
 
-const clerkFrontendApi = `pk_${{pub_key}}`;
+const clerkFrontendApi = `pk_{{pub_key}}`;
 const clerk = new Clerk(clerkFrontendApi);
 await clerk.load({
   // Set load options here...
@@ -91,7 +91,7 @@ await clerk.load({
 
 ```html copy filename="index.html"
 <script>
-  const clerkFrontendApi = `pk_${{pub_key}}`;
+  const clerkFrontendApi = `pk_{{pub_key}}`;
   const frontendApi = '[your-domain].clerk.accounts.dev';
   const version = '@latest';
   const script = document.createElement('script');
