--- a/docs/references/javascript/clerk/organization-methods.mdx
+++ b/docs/references/javascript/clerk/organization-methods.mdx
@@ -55,11 +55,11 @@ The `createOrganization` method is used to create an organization programaticall
 function getOrganizationMemberships(): Promise<OrganizationMembership[]>;
 ```
 
-Get a list of all organizations your current user is a part of in the form of an array of [`OrganizationMembership`]("/docs/references/javascript/organization-membership")s.
+Get a list of all organizations your current user is a part of in the form of an array of [`OrganizationMembership`](/docs/references/javascript/organization-membership)s.
 
 
 ### Returns
 
 | Type | Description |
 | --- | --- |
-| `Promise<OrganizationMembership[]>` | This method returns a `Promise` which resolves to the list of [`OrganizationMembership`]("/docs/references/javascript/organization-membership")'s for the current user. |
+| `Promise<OrganizationMembership[]>` | This method returns a `Promise` which resolves to the list of [`OrganizationMembership`](/docs/references/javascript/organization-membership)s for the current user. |
