--- a/docs/references/javascript/overview.mdx
+++ b/docs/references/javascript/overview.mdx
@@ -40,7 +40,7 @@ Once you have installed the package, you will need to import the ClerkJS object 
 ```js
 import Clerk from '@clerk/clerk-js';
 
-const clerkFrontendApi = `pk_${{pub_key}}`;
+const clerkFrontendApi = `pk_{{pub_key}}`;
 const clerk = new Clerk(clerkFrontendApi);
 await clerk.load({
   // Set load options here...
