--- a/docs/references/javascript/clerk/user-profile.mdx
+++ b/docs/references/javascript/clerk/user-profile.mdx
@@ -243,6 +243,11 @@ All props below are optional.
 | Name | Type | Description |
 | --- | --- | --- |
 | `appearance` | `object` | Controls the overall look and feel. |
-| `routing` | `string` | The routing strategy for your pages. <br />Supported values are:<ul><li>`hash` (default): Hash based routing.</li> <li>`path`: Path based routing.</li></ul> |
+| `routing` | `string` | The routing strategy for your pages. <br />Supported values are:
+  <ul>
+    <li>`hash` (default): Hash based routing.</li> 
+    <li>`path`: Path based routing.</li>
+  </ul> 
+|
 | `path` | `string` | The path where the component is mounted when path-based routing is used.<br/>e.g. `/user-profile`.<br />This prop is ignored in hash-based routing. |
 | `additionalOAuthScopes` | `object` | Specify additional scopes per OAuth provider that your users would like to provide if not already approved.<br/>e.g. `{google: ['foo', 'bar'], github: ['qux']}` |
