--- a/docs/references/javascript/clerk/handle-navigation.mdx
+++ b/docs/references/javascript/clerk/handle-navigation.mdx
@@ -40,8 +40,7 @@ Take a look at the function parameters description below for more usage details.
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `params` | [`HandleMagicLinkVerificationParams`](#handlemagiclinkverificationparams) | Allows you to define the URLs where the user should be redirected to on successful verification and:
-- Completed sign in or sign up attempt. - Pending sign in or sign up attempt.<br />If the magic link is successfully verified on another device, there's a callback function parameter that allows custom code execution. |
+| `params` | [`HandleMagicLinkVerificationParams`](#handlemagiclinkverificationparams) | Allows you to define the URLs where the user should be redirected to on successful verification and: <ul><li>Completed sign in or sign up attempt.</li><li>Pending sign in or sign up attempt.</li></ul><br />If the magic link is successfully verified on another device, there's a callback function parameter that allows custom code execution. |
 | `customNavigate` | `(to: string) => Promise<unknown>` | Allows you to define a custom navigation function. |
 
 ### `HandleMagicLinkVerificationParams`
